ajustes para deixar o código mais limpo

--- a/atividades/atividade1/index.html
+++ b/atividades/atividade1/index.html
@@ -2,10 +2,14 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta property="og:locale" content="pt-br" />
+    <meta property="og:description" content="Uma simples calculadora de IMC">
+    <meta property="og:url" content="https://alekssandher.github.io/curso-full-stack/atividades/atividade1/index.html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Atividade 1</title>
+    <title>Calculadora IMC</title>
 
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
