--- a/atividades/atividade3/index.html
+++ b/atividades/atividade3/index.html
@@ -6,7 +6,7 @@
     <meta property="og:description" content="Banco Feliz">
     <title>Banco Feliz</title>
 
-    <script src="scripts/index.js" type="module" charset="UTF-8"></script>
+    <script src="scripts/index.js"></script>
 </head>
 <body>
     <noscript>O JavaScript pode estar desabilitado, sem ele o site pode não funcionar corretamente, verifique as configurações do seu navegador</noscript>
